# Seq2SeqIsAllYouNeed

./: .gitignore  README.md  pyproject.toml
artifacts/: captions_tokens.json  summary.csv  vocab.json
artifacts/captioning/: eval_lstm_L1_H32_both_greedy_max20.json  eval_lstm_L1_H32_scratch_beam_max20.json  eval_lstm_L1_H32_scratch_greedy_max12.json  eval_lstm_L1_H32_scratch_greedy_max20.json  eval_lstm_L1_H32_scratch_greedy_max28.json  eval_lstm_L1_H64_scratch_greedy_max20.json  eval_lstm_L2_H32_scratch_greedy_max20.json  eval_lstm_L2_H64_scratch_greedy_max20.json  eval_lstm_L3_H32_scratch_greedy_max20.json  eval_lstm_L3_H64_scratch_greedy_max20.json  eval_rnn_L1_H32_both_greedy_max20.json  eval_rnn_L1_H32_scratch_greedy_max20.json  eval_rnn_L1_H64_scratch_greedy_max20.json  eval_rnn_L2_H32_scratch_greedy_max20.json  eval_rnn_L2_H64_scratch_greedy_max20.json  eval_rnn_L3_H32_scratch_greedy_max20.json  eval_rnn_L3_H64_scratch_greedy_max20.json  lstm_L1_H32.history.json  lstm_L1_H64.history.json  lstm_L2_H32.history.json  lstm_L2_H64.history.json  (+8 more)
scripts/: build_vocab.py  eval_caption.py  eval_cnn_scratch.py  extract_features.py  run_experiment_matrix.py  summarize_results.py  train_caption.py  train_cnn.py  visualize_cnn_features.py
tests/: test_activations.py  test_captioning.py  test_cnn_visualization.py  test_conv.py  test_initializers.py  test_keras_comparison.py  test_keras_loader.py  test_layers_api.py  test_losses.py  test_metrics.py  test_module.py  test_optimizers.py  test_rnn.py  test_tensor_api.py  test_trainer.py  test_utils_api.py
(+97 files in other folders)
